remove `overflow: overlay` to fix Table misalignment

--- a/packages/itwinui-css/src/table/base.scss
+++ b/packages/itwinui-css/src/table/base.scss
@@ -12,12 +12,12 @@
 }
 
 @mixin iui-table-header-wrapper {
-  overflow: hidden;
-  // Fix for Firefox columns misalignment
-  @supports not (overflow: overlay) {
-    scrollbar-gutter: stable;
-    background-color: var(--iui-color-background);
-  }
+  overflow-x: hidden;
+  // empty scrollbar space to force alignment with table body
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+
+  background-color: var(--iui-color-background);
   display: flex;
   flex-shrink: 0;
   border-top-left-radius: var(--iui-border-radius-1);
@@ -318,8 +318,8 @@
 }
 
 @mixin iui-table-body {
-  overflow-y: scroll;
-  overflow: overlay;
+  overflow: auto;
+  scrollbar-gutter: stable;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
